# areadetector-rs

./: Cargo.toml  README.md
ad-core/: Cargo.toml
ad-core/Db/: ADBase.db  NDArrayBase.db  NDFile.db  NDPluginBase.db  NDStats.db  NDStdArrays.db
ad-core/src/: color.rs  lib.rs  ndarray_pool.rs
ad-core/src/driver/: ad_driver.rs  ndarray_driver.rs
ad-core/src/params/: ad_driver.rs  ndarray_driver.rs
ad-core/src/plugin/: base.rs  channel.rs  mod.rs  params.rs  runtime.rs
plugins/: Cargo.toml
plugins/src/: circular_buff.rs  codec.rs  color_convert.rs  fft.rs  file_hdf5.rs  file_jpeg.rs  file_tiff.rs  gather.rs  lib.rs  overlay.rs  process.rs  roi.rs  scatter.rs  stats.rs  std_arrays.rs  time_series.rs  transform.rs
plugins/tests/: integration.rs
pydm_opi/: simDetectorSetup.ui
sim-detector/: Cargo.toml
sim-detector/Db/: simDetector.db
sim-detector/examples/: demo.rs
sim-detector/ioc/: st.cmd
sim-detector/opi/pydm/: simDetector.ui
sim-detector/src/: color_layout.rs  compute.rs  driver.rs  ioc_support.rs  lib.rs  params.rs  pixel_cast.rs  plugin_support.rs  roi.rs  task.rs  types.rs
sim-detector/tests/: integration.rs
