[package]
name = "ad-core"
version = "0.1.0"
edition = "2021"
description = "Core types and base classes for areaDetector-rs"

[dependencies]
asyn-rs = { path = "../../asyn-rs" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
thiserror = "2"
parking_lot = "0.12"
