[package]
name = "ad-plugins"
version = "0.1.0"
edition = "2021"
description = "NDPlugin implementations for areaDetector-rs"

[dependencies]
ad-core = { path = "../ad-core" }
asyn-rs = { path = "../../asyn-rs" }
epics-base-rs = { path = "../../epics-base-rs" }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
parking_lot = "0.12"
